--- a/Galeria/style.css
+++ b/Galeria/style.css
@@ -82,6 +82,7 @@ nav ul li a:hover {
     gap: 15px;
     max-width: 1100px; 
     margin: 0 auto;
+    display: flex;
 }
 
 .slider-galeria {
@@ -89,6 +90,7 @@ nav ul li a:hover {
     max-width: 90%;
     overflow: hidden;
     margin: 0 auto;
+    display: flex;
 }
 
 .imagenes {
@@ -106,12 +108,17 @@ nav ul li a:hover {
     overflow: hidden;
     border: 1px solid #ddd;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
+    display: flex;
 }
 
 .cuadro img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.cuadro:hover{
+  transform: scale(1.05);
 }
 
 .flecha {
@@ -219,10 +226,15 @@ footer ul li a:hover {
         flex-wrap: wrap;
         justify-content: center;
     }
+
+    .slider-galeria{
+      flex-wrap: wrap;
+    }
     
     .cuadro {
         width: 150px;
         height: 150px;
+        flex-wrap: wrap;
     }
 }
 
@@ -236,8 +248,13 @@ footer ul li a:hover {
         justify-content: center;
     }
     
+    .slider-galeria{
+      flex-wrap: wrap;
+    }
+
     .cuadro {
         width: 130px;
         height: 130px;
+        flex-wrap: wrap;
     }
 }
